# gptcli

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml  docker.yaml
assets/: default_newlines.packdump
src/: config.rs  main.rs  spinners.rs
