[package]
name = "gptcli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.49", features = ["vendored"] }
rustyline = "11.0.0"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
crossterm = "0.26.1"
serde_json = "1.0.95"
reqwest = { version = "0.11.16", features = ["json"] }
toml = "0.7.3"
dialoguer = "0.10.3"
directories = "5.0.0"
console = "0.15.5"
syntect = "5.0.0"
regex = "1.7.3"
rand = "0.8.5"