[package]
name = "gptcli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.49", features = ["vendored"] }
rustyline = "11.0.0"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
crossterm = "0.26.1"
serde_json = "1.0.95"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
toml = "0.7.3"
dialoguer = "0.10.3"
directories = "5.0.0"
console = "0.15.5"
syntect = { version = "5.0.0", features = ["metadata"] }
regex = "1.7.3"
rand = "0.8.5"
serde_with = {version = "2.3.1", features = ["macros"]}
chrono = "0.4.24"
os_info = "3.7.0"
sys-info = "0.9.1"
textwrap = {version = "0.16.0", features = ["smawk"]}
ctrlc = {version = "3.2.5", features = ["termination"]}
mlua = { version = "0.9.0-beta.1", features = ["lua54", "vendored", "module", "async"]}